[gd_scene load_steps=5 format=3 uid="uid://ygpobru5c8pn"]

[ext_resource type="Script" path="res://player/powerup.gd" id="1_3ysj5"]
[ext_resource type="AudioStream" uid="uid://bf4jbyf68uvt7" path="res://SFX/powerup pickup.wav" id="2_o2lh1"]
[ext_resource type="AudioStream" uid="uid://dd28lb65htpkg" path="res://SFX/get small.wav" id="3_vanyj"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_no7bm"]
points = PackedVector3Array(0, 0.5, 0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[node name="powerup" type="Area3D" node_paths=PackedStringArray("sfx")]
script = ExtResource("1_3ysj5")
active = true
sfx = NodePath("powerup_pickup")

[node name="mesh" type="MeshInstance3D" parent="."]

[node name="label" type="Label3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0601285, 0.868892, 0)
billboard = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_no7bm")

[node name="respawn" type="Timer" parent="."]
wait_time = 3.0

[node name="powerup_pickup" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_o2lh1")
volume_db = -40.0
pitch_scale = 0.9

[node name="small_powerup_pickup" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_vanyj")
volume_db = -40.0
pitch_scale = 0.9

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
